fixed overlapping bug

--- a/frontend/src/components/friends/Friend.css
+++ b/frontend/src/components/friends/Friend.css
@@ -29,6 +29,9 @@
 .friend .noMessages2 {
   font-size: 100px;
 }
+.friend .settingsText {
+  margin-top: 100px;
+}
 .close {
   background-color: rgba(255, 255, 255, 0.5);
 }
@@ -77,7 +80,7 @@
   flex-direction: column;
   grid-gap: 25px;
   margin: 0 auto;
-  margin-top: 35px;
+  margin-top: 100px;
 }
 .record-msg input[type="text"],
 .datetime {
